Fixed projects description spacing due to new font

--- a/css/styles.css
+++ b/css/styles.css
@@ -598,7 +598,7 @@ div.api-projects div p, div.game-room div p, div.cms-custom div p, div.other-pro
   border-bottom-right-radius: 15px;
   position: relative;
   margin: 0 auto;
-  margin-top: -60px;
+  margin-top: -58px;
   width: 600px;
   padding: 10px 0;
   font-size: 1em;
