--- a/src/css/sections/_projects.scss
+++ b/src/css/sections/_projects.scss
@@ -31,7 +31,7 @@ div.api-projects, div.game-room, div.cms-custom, div.other-projects{
 			@include border-bottom-radius(15px);
 			position: relative;
 			margin: 0 auto;
-			margin-top: -60px;
+			margin-top: -58px;
 			width: 600px;
 			padding: 10px 0;
 			font-size: 1em;
